--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -13,7 +13,7 @@ PROG=proj
 .PATH: ${.CURDIR}/game/
 
 # source code files to be compiled
-SRCS = proj.c timer.c utils.c graphics.c KBC.c keyboard.c mouse.c rtc.c model.c view.c sprite.c
+SRCS = proj.c timer.c utils.c graphics.c KBC.c keyboard.c mouse.c rtc.c model.c view.c sprite.c game.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
