--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -17,7 +17,7 @@ SRCS = proj.c timer.c utils.c graphics.c KBC.c keyboard.c mouse.c rtc.c model.c 
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
-CFLAGS += -pedantic  -O2
+CFLAGS += -pedantic -D __LCOM_OPTIMIZED__ -O2
 
 # list of library dependencies (for Lab 2, only LCF library)
 DPADD += ${LIBLCF}
