--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -8,12 +8,12 @@ PROG=proj
 .PATH: ${.CURDIR}/controller/video
 .PATH: ${.CURDIR}/controller/rtc
 .PATH: ${.CURDIR}/controller/driver
-.PATH: ${.CURDIR}/model/
-.PATH: ${.CURDIR}/view/
+.PATH: ${.CURDIR}/states_design/
+.PATH: ${.CURDIR}/sprite/
 .PATH: ${.CURDIR}/game/
 
 # source code files to be compiled
-SRCS = proj.c timer.c utils.c graphics.c KBC.c keyboard.c mouse.c rtc.c model.c view.c sprite.c game.c
+SRCS = proj.c timer.c utils.c graphics.c KBC.c keyboard.c mouse.c rtc.c states.c design.c sprite.c game.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
